--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+POSTGRES_PORT=5432
