--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,15 @@ jobs:
 
       - name: Build Docker images
         run: docker compose build
+
+  tests:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4.0.0
+
+      - name: Run tests with Docker Compose
+        run: docker compose run -rm tests
